--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.12",
     "promise": "^8.0.2",
-    "request": "^2.88.0
+    "request": "^2.88.0"
   }
 }
