--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,13 @@ services:
       - '80:3000'
     links:
       - mongo
+    environment:
+      MONGO_URL: mongodb://mongo:27017/node-server
   mongo:
     container_name: mongo
     image: mongo
     ports:
-      - '27018:27018'
+      - '27017:27017'
     volumes:
       - ./mongodb:/data/db
 
